--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,14 +45,14 @@ repos:
         language: system
         exclude: tests/
 
-  - repo: local
-    hooks:
-      - id: migrations-check
-        language: system
-        name: Check for uncreated migrations.
-        entry: sh -c "./manage.py makemigrations --check --dry-run"
-        files: "models\\.py$"
-        stages: [commit]
+#  - repo: local
+#    hooks:
+#      - id: migrations-check
+#        language: system
+#        name: Check for uncreated migrations.
+#        entry: sh -c "./manage.py makemigrations --check --dry-run"
+#        files: "models\\.py$"
+#        stages: [commit]
 
   - repo: local
     hooks:
