--- a/requirements.txt
+++ b/requirements.txt
@@ -159,14 +159,12 @@ django-celery-results==2.2.0
 django-cities-light==3.8.1
 django-iban==0.3.1
 -e saleor/plugins/oto/
+-e saleor/plugins/otp/
 -e saleor/plugins/vendor/
 -e saleor/plugins/oauth2/
 -e saleor/plugins/algolia/
 -e saleor/plugins/provinces/
 -e saleor/payment/gateways/cod/
 -e saleor/payment/gateways/tabby/
--e saleor/payment/gateways/checkout_payment/
--e saleor/plugins/otp
--e saleor/plugins/countries
 -e saleor/plugins/customer_group/
 -e saleor/payment/gateways/checkout_payment/
