--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saleor",
-  "version": "3.1.0-a.25",
+  "version": "3.1.0-rc.1",
   "engines": {
     "node": ">=14 <15",
     "npm": ">=6.11.0 <7"
