--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,6 @@ documentation = "https://docs.saleor.io/"
   google-cloud-storage = "^2.0.0"
   google-i18n-address = "^2.3.5"
   google-measurement-protocol = "^1.0"
-  graphene-federation = "^0.1.0"
   html-to-draftjs = "^1.0.1"
   markdown = "^3.1.1"
   maxminddb = ">=1.5.4,<3.0.0"
@@ -67,6 +66,7 @@ documentation = "https://docs.saleor.io/"
   django-celery-beat = "^2.2.1"
   posuto = "^2021.10.0"
   cryptography = "^36.0.0"
+  graphene = "<3.0"
 
     [tool.poetry.dependencies.celery]
     version = ">=4.4.5,<6.0.0"
