--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,6 +1,6 @@
 adyen==4.0.0
 amqp==5.0.9; python_version >= "3.7"
-aniso8601==7.0.0
+aniso8601==7.0.0; python_version >= "3.6" and python_version < "4.0"
 asgiref==3.5.0; python_version >= "3.7" and python_version < "4.0"
 astroid==2.9.3; python_full_version >= "3.6.2"
 atomicwrites==1.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version < "4.0" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0" and python_version < "4.0"
@@ -80,10 +80,9 @@ google-measurement-protocol==1.1.0
 google-resumable-media==2.2.1; python_version >= "3.7"
 googleapis-common-protos==1.55.0; python_version >= "3.7"
 graphene-django==2.15.0; python_version >= "3.6" and python_version < "4.0"
-graphene-federation==0.1.0
-graphene==2.1.9; python_version >= "3.6" and python_version < "4.0"
+graphene==2.1.9
 graphql-core==2.3.2; python_version >= "3.6" and python_version < "4.0"
-graphql-relay==2.0.1
+graphql-relay==2.0.1; python_version >= "3.6" and python_version < "4.0"
 grpc-google-iam-v1==0.12.3; python_version >= "3.6"
 grpcio-status==1.44.0; python_version >= "3.7"
 grpcio==1.44.0; python_version >= "3.7"
@@ -179,12 +178,12 @@ razorpay==1.3.0
 redis==4.1.4; python_version >= "3.6"
 requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 rsa==4.8; python_version >= "3.6" and python_version < "4" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
-rx==1.6.1; python_version >= "3.6" and python_version < "4.0"
+rx==1.6.1
 s3transfer==0.5.1; python_version >= "3.6"
 sendgrid==6.9.6; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 sentry-sdk==1.5.6
 singledispatch==3.7.0; python_version >= "3.6" and python_version < "4.0"
-six==1.16.0; python_full_version >= "3.6.1" and python_version < "3.10" and python_version >= "3.7" and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.5") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.3.0") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0")
+six==1.16.0; python_full_version >= "3.6.1" and python_version < "3.10" and python_version >= "3.7" and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.5") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.3.0")
 smmap==5.0.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version < "3.10" and python_version >= "3.7"
 snowballstemmer==2.2.0; python_version >= "3.6"
 soupsieve==2.3.1; python_version >= "3.6"
